CrossSectionCreator: show raypath ; PartialsMovieMaker: avoid using Files.writeString()